# benchmark_utils

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yaml  nbdocs.ini  noxfile.py  noxfile_conda.py  noxfile_conda_lint.py  noxfile_cov.py  noxfile_img_libs.py  noxfile_img_libs_conda.py  noxfile_lint.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  requirements_test_extra.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  deploy_docs.yml  lint.yml  tests.yml
benchmark_utils/: __init__.py  benchmark.py  benchmark_image_read.py  image_libs.py  read_image.py
benchmark_utils/image_libs/: __init__.py  get_image_files.py  image_libs.py  image_libs_supported.py  read_image.py
docs/: README.md
docs/plans/: 2026-02-01-inventory.md  2026-02-01-uv-migration.md  2026-02-01-version-from-pyproject.md  2026-02-01-version-resolution-hardening.md
docs/reviews/: 2026-02-01-version-pr-review.md
examples/: example_1.py
nbs/: README.ipynb
plans/2026-02-01-inventory/: index.html
plans/2026-02-01-uv-migration/: index.html
plans/2026-02-01-version-from-pyproject/: index.html
plans/2026-02-01-version-resolution-hardening/: index.html
reviews/2026-02-01-version-pr-review/: index.html
search/: search_index.json
src/benchmark_utils/: __init__.py  benchmark.py  version.py  version.py,cover
tests/: conftest.py  test_benchmark.py  test_benchmark_image_read.py  test_get_image_files.py  test_image_libs.py  test_version.py
