[tool.poetry]
name = "benchmark_utils"
version = "0.0.1"
description = ""
authors = ["ayasyrev <a.yasyrev@gmail.com>"]
description = "Benchmark utils"
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/ayasyrev/benchmark_utils"
repository = "https://github.com/ayasyrev/benchmark_utils"
keywords = ["Benchmark"]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
