[tool.poetry]
name = "benchmark_utils"
version = "0.0.1"
authors = ["ayasyrev <a.yasyrev@gmail.com>"]
description = "Benchmark utils"
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/ayasyrev/benchmark_utils"
repository = "https://github.com/ayasyrev/benchmark_utils"
keywords = ["Benchmark"]


[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
mypy = "^0.800"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["benchmark_utils"]

[tool.coverage.report]
show_missing = true
#fail_under = 100


