[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "benchmark_utils"
version = "0.2.5b1"
description = "Utils for benchmark."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.15"
authors = [
    {name = "Yasyrev Andrei", email = "a.yasyrev@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "tomli>=2.0.0; python_version<'3.11'"
]

[project.urls]
Homepage = "https://github.com/ayasyrev/benchmark_utils"
Repository = "https://github.com/ayasyrev/benchmark_utils"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "black[jupyter]",
    "coverage[toml]",
    "flake8",
    "isort",
    "mypy",
    "nbmetaclean",
    "nox",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
# Assume Python 3.10
target-version = "py310"

# Same as Black.
line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "benchmark",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "tests",
  "tools",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
lint.explicit-preview-rules = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "benchmark_utils" ]

[tool.coverage.report]
show_missing = true
