[metadata]
name = benchmark_utils
version = attr: benchmark_utils.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Utils for benchmark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/benchmark_utils
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
