[metadata]
name = benchmark_utils
version = attr: benchmark_utils.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Utils for benchmark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/benchmark_utils
license = apache2
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: "3.11"
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
